--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,2 +1,7 @@
+@forward 'config';
+@forward 'core';
 @forward 'reset';
 @forward 'global';
+@forward 'components';
+@forward 'utilities';
+@forward 'styles';
