Refactor and resets

--- a/scss/reset/_normalize.scss
+++ b/scss/reset/_normalize.scss
@@ -1,1 +1,6 @@
+/// Normalize styles
+/// ---------------------------------------------------------
+/// Source: https://github.com/sindresorhus/modern-normalize
+/// =========================================================
+
 @import 'modern-normalize/modern-normalize';
