--- a/_dev/assets/css/main.css
+++ b/_dev/assets/css/main.css
@@ -266,23 +266,110 @@ summary {
   display: list-item;
 }
 
-body {
-  background-color: #00f;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
 }
 
+/* Avoid text overflow */
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+}
+
+/* Remove list styles on ul, ol elements with a list role */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* Core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Body defaults */
+body {
+  min-height: 100vh;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Improve media */
+img,
+picture,
+video,
+canvas {
+  max-width: 100%;
+  display: block;
+}
+
+/* Remove built-in form typography styles */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+*::before,
+*::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 :root {
   --var-custom-prop: 6969;
 }
 
 body {
-  margin: 1.5rem;
-  padding: 2rem;
+  background-color: #00f;
+}
+
+body {
   color: #cbd5e1;
   background-color: #1e293b;
-  border: 2px solid #f5f;
-  border-radius: 8px;
+  padding: 3rem;
 }
 
 a {
   color: #059669;
+}
+
+.wrapper {
+  margin: 1.5rem;
+  padding: 2rem;
+  background-color: #475569;
+  border: 2px solid #f5f;
+  border-radius: 8px;
 }
