--- a/_dev/assets/scss/main.scss
+++ b/_dev/assets/scss/main.scss
@@ -3,14 +3,19 @@
 @use 'koi';
 
 body {
-  margin: koi.rem(24);
-  padding: koi.theme(spacing, 32);
   color: koi.color(gray, 300);
   background-color: koi.color(gray, 800);
-  border: 2px solid koi.color(secondary);
-  border-radius: 8px;
+  padding: koi.theme(spacing, 48);
 }
 
 a {
   color: koi.color(primary);
+}
+
+.wrapper {
+  margin: koi.rem(24);
+  padding: koi.theme(spacing, 32);
+  background-color: koi.color(gray, 600);
+  border: 2px solid koi.color(secondary);
+  border-radius: 8px;
 }
