--- a/scss/koi.scss
+++ b/scss/koi.scss
@@ -1,7 +1,6 @@
 @forward 'config';
 @forward 'core';
 @forward 'reset';
-@forward 'global';
+@forward 'base';
 @forward 'components';
 @forward 'utilities';
-@forward 'styles';
