--- a/_dev/assets/scss/main.scss
+++ b/_dev/assets/scss/main.scss
@@ -4,7 +4,7 @@
 
 body {
   color: koi.color(gray, 300);
-  background-color: koi.color(gray, 800);
+  background-color: koi.color(gray, 900);
   padding: koi.theme(spacing, 48);
 }
 
@@ -13,9 +13,23 @@ a {
 }
 
 .wrapper {
-  margin: koi.rem(24);
+  margin-top: koi.rem(24);
   padding: koi.theme(spacing, 32);
-  background-color: koi.color(gray, 600);
+  background-color: koi.color(gray, 800);
   border: 2px solid koi.color(secondary);
   border-radius: 8px;
+
+  &:hover {
+    border-color: koi.color(primary);
+    transition: all linear 400ms;
+  }
+
+  button {
+    // @include koi.visually-hidden();
+    margin-top: 1rem;
+  }
+}
+
+.lists {
+  margin-top: koi.rem(12);
 }
