--- a/scss/reset/_normalize.scss
+++ b/scss/reset/_normalize.scss
@@ -1,6 +1,4 @@
 /// Normalize styles
-/// ---------------------------------------------------------
-/// Source: https://github.com/sindresorhus/modern-normalize
-/// =========================================================
+/// ================
 
 @import 'modern-normalize/modern-normalize';
