--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -113,6 +113,43 @@ $spacing: (
   512: rem(512),
 );
 
+$font-family: (
+  sans: (
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    'Noto Sans',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji',
+  ),
+  serif: (
+    ui-serif,
+    Georgia,
+    Cambria,
+    'Times New Roman',
+    Times,
+    serif,
+  ),
+  mono: (
+    ui-monospace,
+    SFMono-Regular,
+    Menlo,
+    Monaco,
+    Consolas,
+    'Liberation Mono',
+    'Courier New',
+    monospace,
+  ),
+);
+
 $font-size: (
   3xs: rem(8),
   2xs: rem(10),
@@ -134,9 +171,182 @@ $font-size: (
   12xl: rem(96),
 );
 
+$font-weight: (
+  thin: 100,
+  extralight: 200,
+  light: 300,
+  normal: 400,
+  medium: 500,
+  semibold: 600,
+  bold: 700,
+  extrabold: 800,
+  black: 900,
+);
+
+// Line Height
+$leading: (
+  3: 0.75rem,
+  4: 1rem,
+  5: 1.25rem,
+  6: 1.5rem,
+  7: 1.75rem,
+  8: 2rem,
+  9: 2.25rem,
+  10: 2.5rem,
+  none: 1,
+  tight: 1.25,
+  snug: 1.375,
+  normal: 1.5,
+  relaxed: 1.625,
+  loose: 2,
+);
+
+// Letter Spacing
+$tracking: (
+  tightest: -0.08em,
+  tighter: -0.05em,
+  tight: -0.025em,
+  normal: normal,
+  wide: 0.025em,
+  wider: 0.05em,
+  widest: 0.1em,
+);
+
+$opacity: (
+  0: 0,
+  2: 0.02,
+  4: 0.04,
+  6: 0.06,
+  8: 0.08,
+  10: 0.1,
+  15: 0.15,
+  20: 0.2,
+  25: 0.25,
+  30: 0.3,
+  35: 0.35,
+  40: 0.4,
+  45: 0.45,
+  50: 0.5,
+  55: 0.55,
+  60: 0.6,
+  65: 0.65,
+  70: 0.7,
+  75: 0.75,
+  80: 0.8,
+  85: 0.85,
+  90: 0.9,
+  95: 0.95,
+  100: 1,
+);
+
+$border-radius: (
+  sm: rem(2),
+  md: rem(4),
+  lg: rem(6),
+  xl: rem(8),
+  2xl: rem(12),
+  3xl: rem(16),
+  4xl: rem(24),
+  full: 9999px,
+);
+
+// radiuses: (
+//   2xs: rem(3),
+//   xs: rem(4),
+//   sm: rem(6),
+//   md: rem(8),
+//   lg: rem(12),
+//   xl: rem(16),
+//   2xl: rem(24),
+// ),
+
+$shadow: (
+  2xs: '0 0 0 1px rgba(0, 0, 0, 0.05)',
+  xs: '0 1px 2px 0 rgba(0, 0, 0, 0.05)',
+  sm: '0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)',
+  md: '0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06)',
+  lg: '0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)',
+  xl: '0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04)',
+  2xl: '0 25px 50px -12px rgba(0, 0, 0, 0.25)',
+  inner: 'inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)',
+  outline: '0 0 0 3px rgba(66, 153, 225, 0.5)',
+  solid: '0 0 0 2px currentColor',
+  focus: '0 0 0 4px rgba(0, 84, 203, 0.2)',
+  success: '0 0 0 4px rgba(18, 181, 57, 0.2)',
+  warning: '0 0 0 4px rgba(210, 127, 0, 0.2)',
+  danger: '0 0 0 4px rgba(203, 18, 0, 0.2)',
+  info: '0 0 0 4px rgba(0, 200, 177, 0.2)',
+);
+
+$blur: (
+  2xs: 4px,
+  xs: 8px,
+  sm: 12px,
+  md: 16px,
+  lg: 24px,
+  xl: 32px,
+  2xl: 48px,
+);
+
+$keyframes: (
+  spin: (
+    from: (
+      transform: rotate(0deg),
+    ),
+    to: (
+      transform: rotate(360deg),
+    ),
+  ),
+  ping: (
+    0%: (
+      transform: scale(1),
+      opacity: 1,
+    ),
+    80%: (
+      transform: scale(2.25),
+      opacity: 0,
+    ),
+    100%: (
+      transform: scale(2.25),
+      opacity: 0,
+    ),
+  ),
+  bounce: (
+    0%: (
+      transform: translateY(-25%),
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1),
+    ),
+    50%: (
+      transform: none,
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1),
+    ),
+    100%: (
+      transform: translateY(-25%),
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1),
+    ),
+  ),
+  pulse: (
+    0%: (
+      opacity: 1,
+    ),
+    50%: (
+      opacity: 0.5,
+    ),
+    100%: (
+      opacity: 1,
+    ),
+  ),
+);
+
+// ================
+
 $tokens: (
   screens: $screens,
   colors: $colors,
   spacing: $spacing,
+  font-family: $font-family,
   font-size: $font-size,
+  font-weight: $font-weight,
+  leading: $leading,
+  tracking: $tracking,
 );
