Change border-radius tokens

--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -240,7 +240,8 @@ $opacity: (
 );
 
 $border-radius: (
-  sm: rem(2),
+  xs: rem(2),
+  sm: rem(3),
   md: rem(4),
   lg: rem(6),
   xl: rem(8),
@@ -249,16 +250,6 @@ $border-radius: (
   4xl: rem(24),
   full: 9999px,
 );
-
-// radiuses: (
-//   2xs: rem(3),
-//   xs: rem(4),
-//   sm: rem(6),
-//   md: rem(8),
-//   lg: rem(12),
-//   xl: rem(16),
-//   2xl: rem(24),
-// ),
 
 $shadow: (
   2xs: '0 0 0 1px rgba(0, 0, 0, 0.05)',
