--- a/_dev/assets/css/main.css
+++ b/_dev/assets/css/main.css
@@ -366,16 +366,170 @@ select {
     scroll-behavior: auto !important;
   }
 }
-:root {
-  --var-custom-prop: 6969;
+/*! purgecss start ignore */
+@keyframes fade-in {
+  to {
+    opacity: 1;
+  }
 }
-
+@keyframes fade-out {
+  to {
+    opacity: 0;
+  }
+}
+@keyframes scale-up {
+  to {
+    transform: scale(1.25);
+  }
+}
+@keyframes scale-down {
+  to {
+    transform: scale(0.75);
+  }
+}
+@keyframes slide-out-up {
+  to {
+    transform: translateY(-100%);
+  }
+}
+@keyframes slide-out-down {
+  to {
+    transform: translateY(100%);
+  }
+}
+@keyframes slide-out-right {
+  to {
+    transform: translateX(100%);
+  }
+}
+@keyframes slide-out-left {
+  to {
+    transform: translateX(-100%);
+  }
+}
+@keyframes slide-in-up {
+  from {
+    transform: translateY(100%);
+  }
+}
+@keyframes slide-in-down {
+  from {
+    transform: translateY(-100%);
+  }
+}
+@keyframes slide-in-right {
+  from {
+    transform: translateX(-100%);
+  }
+}
+@keyframes slide-in-left {
+  from {
+    transform: translateX(100%);
+  }
+}
+@keyframes shake-x {
+  0%, 100% {
+    transform: translateX(0%);
+  }
+  20% {
+    transform: translateX(-5%);
+  }
+  40% {
+    transform: translateX(5%);
+  }
+  60% {
+    transform: translateX(-5%);
+  }
+  80% {
+    transform: translateX(5%);
+  }
+}
+@keyframes shake-y {
+  0%, 100% {
+    transform: translateY(0%);
+  }
+  20% {
+    transform: translateY(-5%);
+  }
+  40% {
+    transform: translateY(5%);
+  }
+  60% {
+    transform: translateY(-5%);
+  }
+  80% {
+    transform: translateY(5%);
+  }
+}
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+@keyframes ping {
+  75%, 100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+@keyframes blink {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+@keyframes float {
+  50% {
+    transform: translateY(-25%);
+  }
+}
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
+@keyframes ring {
+  20% {
+    transform: rotate3d(0, 0, 1, 15deg);
+  }
+  40% {
+    transform: rotate3d(0, 0, 1, -10deg);
+  }
+  60% {
+    transform: rotate3d(0, 0, 1, 5deg);
+  }
+  80% {
+    transform: rotate3d(0, 0, 1, -5deg);
+  }
+  to {
+    transform: rotate3d(0, 0, 1, 0deg);
+  }
+}
+/*! purgecss end ignore */
 body {
   background-color: #00f;
 }
 
 body {
-  color: #cbd5e1;
+  color: #f1f5f9;
   background-color: #0f172a;
   padding: 3rem;
 }
@@ -387,7 +541,6 @@ a {
 .wrapper {
   margin-top: 1.5rem;
   padding: 2rem;
-  background-color: #1e293b;
   border: 2px solid yellow;
   border-radius: 8px;
 }
@@ -401,4 +554,21 @@ a {
 
 .lists {
   margin-top: 0.75rem;
+}
+
+.box {
+  width: 64px;
+  height: 64px;
+  margin: 24px;
+  background-color: #0cf;
+  color: #0f172a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+}
+@media screen and (min-width: 768px) {
+  .box {
+    background-color: yellow;
+  }
 }
