--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -1,15 +1,17 @@
 /// Design Tokens
 /// =============
 
-@use 'core/helpers' as *;
+@use 'sass:math';
+@use '../core/helpers/unit' as *;
 
 $screens: (
-  xs: 320px,
-  sm: 640px,
+  2xs: 240px,
+  xs: 360px,
+  sm: 480px,
   md: 768px,
   lg: 1024px,
-  xl: 1280px,
-  2xl: 1536px,
+  xl: 1440px,
+  2xl: 1920px,
 );
 
 $colors: (
@@ -206,10 +208,22 @@ $tracking: (
   tightest: -0.08em,
   tighter: -0.05em,
   tight: -0.025em,
-  normal: normal,
+  normal: 0em,
   wide: 0.025em,
   wider: 0.05em,
   widest: 0.1em,
+);
+
+$radius: (
+  xs: rem(2),
+  sm: rem(3),
+  md: rem(4),
+  lg: rem(6),
+  xl: rem(8),
+  2xl: rem(12),
+  3xl: rem(16),
+  4xl: rem(24),
+  full: 9999px,
 );
 
 $opacity: (
@@ -239,18 +253,6 @@ $opacity: (
   100: 1,
 );
 
-$border-radius: (
-  xs: rem(2),
-  sm: rem(3),
-  md: rem(4),
-  lg: rem(6),
-  xl: rem(8),
-  2xl: rem(12),
-  3xl: rem(16),
-  4xl: rem(24),
-  full: 9999px,
-);
-
 $shadow: (
   2xs: '0 0 0 1px rgba(0, 0, 0, 0.05)',
   xs: '0 1px 2px 0 rgba(0, 0, 0, 0.05)',
@@ -262,11 +264,54 @@ $shadow: (
   inner: 'inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)',
   outline: '0 0 0 3px rgba(66, 153, 225, 0.5)',
   solid: '0 0 0 2px currentColor',
-  focus: '0 0 0 4px rgba(0, 84, 203, 0.2)',
-  success: '0 0 0 4px rgba(18, 181, 57, 0.2)',
-  warning: '0 0 0 4px rgba(210, 127, 0, 0.2)',
-  danger: '0 0 0 4px rgba(203, 18, 0, 0.2)',
-  info: '0 0 0 4px rgba(0, 200, 177, 0.2)',
+);
+
+$duration: (
+  // Semantic
+  ultra-fast: 25ms,
+  super-fast: 50ms,
+  fastest: 75ms,
+  faster: 100ms,
+  fast: 150ms,
+  normal: 200ms,
+  slow: 300ms,
+  slower: 500ms,
+  slowest: 600ms,
+  super-slow: 800ms,
+  ultra-slow: 1200ms,
+  // Numeric
+  1: 1s,
+  2: 2s,
+  3: 3s,
+  4: 4s,
+  5: 5s,
+  25: 25ms,
+  50: 50ms,
+  75: 75ms,
+  100: 100ms,
+  150: 150ms,
+  200: 200ms,
+  300: 300ms,
+  500: 500ms,
+  700: 700ms,
+  1000: 1000ms
+);
+
+$timing: (
+  linear: linear,
+  ease: cubic-bezier(0.25, 0.1, 0.25, 1),
+  ease-in: cubic-bezier(0.4, 0, 1, 1),
+  ease-out: cubic-bezier(0, 0, 0.2, 1),
+  ease-in-out: cubic-bezier(0.4, 0, 0.2, 1),
+);
+
+$aspect: (
+  box: 1,
+  landscape: math.div(4, 3),
+  portrait: math.div(3, 4),
+  widescreen: math.div(16, 9),
+  ultrawide: math.div(18, 5),
+  golden: 1.618,
 );
 
 $blur: (
@@ -279,57 +324,7 @@ $blur: (
   2xl: 48px,
 );
 
-$keyframes: (
-  spin: (
-    from: (
-      transform: rotate(0deg),
-    ),
-    to: (
-      transform: rotate(360deg),
-    ),
-  ),
-  ping: (
-    0%: (
-      transform: scale(1),
-      opacity: 1,
-    ),
-    80%: (
-      transform: scale(2.25),
-      opacity: 0,
-    ),
-    100%: (
-      transform: scale(2.25),
-      opacity: 0,
-    ),
-  ),
-  bounce: (
-    0%: (
-      transform: translateY(-25%),
-      animation-timing-function: cubic-bezier(0.8, 0, 1, 1),
-    ),
-    50%: (
-      transform: none,
-      animation-timing-function: cubic-bezier(0, 0, 0.2, 1),
-    ),
-    100%: (
-      transform: translateY(-25%),
-      animation-timing-function: cubic-bezier(0.8, 0, 1, 1),
-    ),
-  ),
-  pulse: (
-    0%: (
-      opacity: 1,
-    ),
-    50%: (
-      opacity: 0.5,
-    ),
-    100%: (
-      opacity: 1,
-    ),
-  ),
-);
-
-// ================
+// --------
 
 $tokens: (
   screens: $screens,
@@ -340,4 +335,11 @@ $tokens: (
   font-weight: $font-weight,
   leading: $leading,
   tracking: $tracking,
+  radius: $radius,
+  opacity: $opacity,
+  shadow: $shadow,
+  duration: $duration,
+  timing: $timing,
+  aspect: $aspect,
+  blur: $blur,
 );
