--- a/scss/core/_api.scss
+++ b/scss/core/_api.scss
@@ -2,35 +2,17 @@
 /// =================
 
 @use 'sass:map';
+@use 'sass:list';
+@use 'sass:string';
 @use 'sass:meta';
-@use 'error';
+@use 'helpers' as *;
 @use '../config' as *;
-
-$_fallback-shade: map.get($config, settings, fallback-color-shade);
 
 // Get a value from the theme
 @function theme($keys...) {
-  @if map.get($theme, $keys...) {
-    @return map.get($theme, $keys...);
-  } @else {
-    @error error.theme-keys($keys...);
-  }
-}
-
-// type can be `value` (default) sass variable value or `var` css variable
-@function color($name, $shade: $_fallback-shade, $alpha: 1, $type: value) {
-  @if $type == value {
-    @if is-theme-color($name, $shade) {
-      @return theme(colors, $name, $shade);
-    } @else if is-theme-color($name) {
-      @return theme(colors, $name);
-    } @else {
-      @error error.color($name, $shade);
-    }
-  } @else {
-    // TODO: implement color var return
-    @return 'var(--custom-prop-color-value-here)';
-  }
+  $property: list.nth($keys, 1);
+  $fallback: map.get($config, fallbacks, $property);
+  @return map-get-key($theme, $fallback, $keys...);
 }
 
 @function is-theme-color($keys...) {
@@ -38,4 +20,13 @@ $_fallback-shade: map.get($config, settings, fallback-color-shade);
   $value: map.get($colors, $keys...);
 
   @return map.has-key($colors, $keys...) and (meta.type-of($value) == color);
+}
+
+// Get a config value
+@function config($keys...) {
+  @if map.has-key($config, $keys...) {
+    @return map.get($config, $keys...);
+  } @else {
+    @error "Keys #{list.slash($keys...)} doesn't exist in the config map!";
+  }
 }
