--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -208,7 +208,7 @@ $tracking: (
   tightest: -0.08em,
   tighter: -0.05em,
   tight: -0.025em,
-  normal: 0em,
+  normal: 0,
   wide: 0.025em,
   wider: 0.05em,
   widest: 0.1em,
