--- a/scss/config/_config.scss
+++ b/scss/config/_config.scss
@@ -4,7 +4,7 @@ $config: () !default;
 $default-config: (
   prefix: 'koi',
   utilities: (
-    enable: true,
+    enabled: true,
     ignore-keys: (),
   ),
   fallbacks: (
