--- a/_dev/assets/scss/_config.scss
+++ b/_dev/assets/scss/_config.scss
@@ -3,5 +3,11 @@
     colors: (
       secondary: yellow,
     ),
+    font-family: (
+      heading: (
+        'Lato',
+        sans-serif,
+      ),
+    ),
   )
 );
