--- a/scss/core/modules/_animation.scss
+++ b/scss/core/modules/_animation.scss
@@ -1,6 +1,8 @@
 /// Animation
 /// =========
 
+// TODO: Add more animations from https://open-props.style/#animations
+
 @use 'sass:map';
 @use '../api' as *;
 
