--- a/_dev/assets/css/main.css
+++ b/_dev/assets/css/main.css
@@ -367,7 +367,7 @@ select {
   }
 }
 body {
-  background-color: #fff;
+  background-color: #ccc;
 }
 
 /*! purgecss start ignore */
@@ -536,6 +536,13 @@ body {
   color: #f1f5f9;
   background-color: #0f172a;
   padding: 2rem;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+h1 {
+  font-family: "Lato", sans-serif;
 }
 
 a {
@@ -560,10 +567,14 @@ a {
   margin-top: 0.75rem;
 }
 
+.text {
+  line-height: 1.625;
+}
+
 .box {
   width: 64px;
   height: 64px;
-  margin: 24px;
+  margin-top: 24px;
   background-color: #0cf;
   color: #0f172a;
   display: flex;
