--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -152,25 +152,68 @@ $font-family: (
   ),
 );
 
+// Font size with default line-height
 $font-size: (
-  3xs: rem(8),
-  2xs: rem(10),
-  xs: rem(12),
-  sm: rem(14),
-  md: rem(16),
-  lg: rem(18),
-  xl: rem(20),
-  2xl: rem(24),
-  3xl: rem(28),
-  4xl: rem(32),
-  5xl: rem(36),
-  6xl: rem(40),
-  7xl: rem(48),
-  8xl: rem(56),
-  9xl: rem(64),
-  10xl: rem(72),
-  11xl: rem(80),
-  12xl: rem(96),
+  3xs: (
+    rem(8),
+    rem(10),
+  ),
+  2xs: (
+    rem(10),
+    rem(12),
+  ),
+  xs: (
+    rem(12),
+    rem(16),
+  ),
+  sm: (
+    rem(14),
+    rem(20),
+  ),
+  md: (
+    rem(16),
+    rem(24),
+  ),
+  lg: (
+    rem(18),
+    rem(28),
+  ),
+  xl: (
+    rem(20),
+    rem(28),
+  ),
+  2xl: (
+    rem(24),
+    rem(32),
+  ),
+  3xl: (
+    rem(30),
+    rem(36),
+  ),
+  4xl: (
+    rem(36),
+    rem(40),
+  ),
+  5xl: (
+    rem(48),
+    1,
+  ),
+  6xl: (
+    rem(60),
+    1,
+  ),
+  7xl: (
+    rem(72),
+    1,
+  ),
+  8xl: (
+    rem(96),
+    1,
+  ),
+  9xl: (
+    rem(128),
+    1,
+  ),
 );
 
 $font-weight: (
@@ -187,14 +230,16 @@ $font-weight: (
 
 // Line Height
 $leading: (
-  3: 0.75rem,
-  4: 1rem,
-  5: 1.25rem,
-  6: 1.5rem,
-  7: 1.75rem,
-  8: 2rem,
-  9: 2.25rem,
-  10: 2.5rem,
+  1: rem(8),
+  2: rem(10),
+  3: rem(12),
+  4: rem(16),
+  5: rem(20),
+  6: rem(24),
+  7: rem(28),
+  8: rem(32),
+  9: rem(36),
+  10: rem(40),
   none: 1,
   tight: 1.25,
   snug: 1.375,
@@ -264,6 +309,22 @@ $shadow: (
   inner: 'inset 0 2px 4px 0 rgba(0, 0, 0, 0.06)',
   outline: '0 0 0 3px rgba(66, 153, 225, 0.5)',
   solid: '0 0 0 2px currentColor',
+);
+
+$layer: (
+  hidden: -100,
+  lower: -2,
+  below: -1,
+  base: 0,
+  above: 1,
+  higher: 2,
+  sticky: 100,
+  fixed: 200,
+  dropdown: 300,
+  overlay: 400,
+  modal: 500,
+  popover: 600,
+  tooltip: 700,
 );
 
 $duration: (
@@ -338,6 +399,7 @@ $tokens: (
   radius: $radius,
   opacity: $opacity,
   shadow: $shadow,
+  layer: $layer,
   duration: $duration,
   timing: $timing,
   aspect: $aspect,
