--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -1,5 +1,6 @@
-/// Design Tokens
-/// =============
+// --------------------------------
+//   Design Tokens
+// --------------------------------
 
 @use 'sass:math';
 @use '../core/helpers/unit' as *;
@@ -16,68 +17,69 @@ $screens: (
 
 $colors: (
   gray: (
-    50: #f8fafc,
-    100: #f1f5f9,
-    200: #e2e8f0,
-    300: #cbd5e1,
-    400: #94a3b8,
-    500: #64748b,
-    600: #475569,
-    700: #334155,
-    800: #1e293b,
-    900: #0f172a,
+    0: #f8fafc,
+    1: #f1f5f9,
+    2: #e2e8f0,
+    3: #cbd5e1,
+    4: #94a3b8,
+    5: #64748b,
+    6: #475569,
+    7: #334155,
+    8: #1e293b,
+    9: #0f172a,
   ),
   red: (
-    50: #fef2f2,
-    100: #fee2e2,
-    200: #fecaca,
-    300: #fca5a5,
-    400: #f87171,
-    500: #ef4444,
-    600: #dc2626,
-    700: #b91c1c,
-    800: #991b1b,
-    900: #7f1d1d,
+    0: #fef2f2,
+    1: #fee2e2,
+    2: #fecaca,
+    3: #fca5a5,
+    4: #f87171,
+    5: #ef4444,
+    6: #dc2626,
+    7: #b91c1c,
+    8: #991b1b,
+    9: #7f1d1d,
   ),
   yellow: (
-    50: #fefce8,
-    100: #fef9c3,
-    200: #fef08a,
-    300: #fde047,
-    400: #facc15,
-    500: #eab308,
-    600: #ca8a04,
-    700: #a16207,
-    800: #854d0e,
-    900: #713f12,
+    0: #fefce8,
+    1: #fef9c3,
+    2: #fef08a,
+    3: #fde047,
+    4: #facc15,
+    5: #eab308,
+    6: #ca8a04,
+    7: #a16207,
+    8: #854d0e,
+    9: #713f12,
   ),
   green: (
-    50: #f0fdf4,
-    100: #dcfce7,
-    200: #bbf7d0,
-    300: #86efac,
-    400: #4ade80,
-    500: #22c55e,
-    600: #16a34a,
-    700: #15803d,
-    800: #166534,
-    900: #14532d,
+    0: #f0fdf4,
+    1: #dcfce7,
+    2: #bbf7d0,
+    3: #86efac,
+    4: #4ade80,
+    5: #22c55e,
+    6: #16a34a,
+    7: #15803d,
+    8: #166534,
+    9: #14532d,
   ),
   blue: (
-    50: #eff6ff,
-    100: #dbeafe,
-    200: #bfdbfe,
-    300: #93c5fd,
-    400: #60a5fa,
-    500: #3b82f6,
-    600: #2563eb,
-    700: #1d4ed8,
-    800: #1e40af,
-    900: #1e3a8a,
+    0: #eff6ff,
+    1: #dbeafe,
+    2: #bfdbfe,
+    3: #93c5fd,
+    4: #60a5fa,
+    5: #3b82f6,
+    6: #2563eb,
+    7: #1d4ed8,
+    8: #1e40af,
+    9: #1e3a8a,
   ),
 );
 
 $spacing: (
+  0: rem(0),
   1: rem(1),
   2: rem(2),
   4: rem(4),
@@ -154,10 +156,6 @@ $font-family: (
 
 // Font size with default line-height
 $font-size: (
-  3xs: (
-    rem(8),
-    rem(10),
-  ),
   2xs: (
     rem(10),
     rem(12),
@@ -325,6 +323,7 @@ $layer: (
   modal: 500,
   popover: 600,
   tooltip: 700,
+  uber: 4815162342,
 );
 
 $duration: (
@@ -385,7 +384,7 @@ $blur: (
   2xl: 48px,
 );
 
-// --------
+// --------------------------------
 
 $tokens: (
   screens: $screens,
