--- a/dev/assets/scss/main.scss
+++ b/dev/assets/scss/main.scss
@@ -5,6 +5,7 @@
 // @use 'koi-utilities';
 
 @use 'sass:map';
+@use 'sass:list';
 @forward 'config';
 @use 'koi';
 
@@ -62,15 +63,15 @@ a {
   border-radius: koi.radius(lg);
   transition: all 400ms linear;
 
-  @for $i from 1 through 10 {
+  @for $i from 1 through list.length(koi.theme(gradients)) {
     &--#{$i} {
-      @include koi.gradient($i, linear);
+      @include koi.gradient($i);
     }
   }
 }
 
 .box-grid {
   display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 1.5rem;
 }
