--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Base Styles
+// --------------------------------
+
 @use '../core' as *;
 @use '../reset';
 
