--- a/scss/config/_theme.scss
+++ b/scss/config/_theme.scss
@@ -1,5 +1,6 @@
-/// Koi default theme
-/// =================
+// --------------------------------
+//   Default Theme
+// --------------------------------
 
 @use 'sass:map';
 @use 'tokens' as *;
