--- a/scss/core/_api.scss
+++ b/scss/core/_api.scss
@@ -1,5 +1,6 @@
-/// Koi API functions
-/// =================
+// --------------------------------
+//   Core API functions and mixins
+// --------------------------------
 
 @use 'sass:map';
 @use 'sass:list';
