--- a/scss/core/helpers/_unit.scss
+++ b/scss/core/helpers/_unit.scss
@@ -1,5 +1,6 @@
-/// Koi Unit helper functions
-/// =========================
+// --------------------------------
+//   Unit helpers
+// --------------------------------
 
 @use 'sass:map';
 @use 'sass:math';
