--- a/scss/core/modules/_color.scss
+++ b/scss/core/modules/_color.scss
@@ -1,5 +1,6 @@
-/// Color
-/// =====
+// --------------------------------
+//   Color
+// --------------------------------
 
 @use 'sass:map';
 @use '../api' as *;
