--- a/scss/core/modules/_index.scss
+++ b/scss/core/modules/_index.scss
@@ -3,10 +3,9 @@
 @forward 'color';
 @forward 'gradient';
 @forward 'layer';
-@forward 'media';
+@forward 'media-query';
 @forward 'shadow';
 @forward 'spacing';
 @forward 'svg';
 @forward 'transition';
 @forward 'typography';
-@forward 'visibility';
