--- a/scss/core/modules/_layer.scss
+++ b/scss/core/modules/_layer.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Layer / Z-Index
+// --------------------------------
+
 @use '../api' as *;
 
 @function layer($layer: config(fallbacks, layer)) {
