--- a/scss/core/modules/_shadow.scss
+++ b/scss/core/modules/_shadow.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Shadows
+// --------------------------------
+
 @use '../api' as *;
 
 /// Return a shadow value from the theme
