--- a/scss/core/modules/_spacing.scss
+++ b/scss/core/modules/_spacing.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Spacing
+// --------------------------------
+
 @use '../api' as *;
 
 // TODO: Allow multiple values
