--- a/scss/core/modules/_typography.scss
+++ b/scss/core/modules/_typography.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Typography
+// --------------------------------
+
 @use 'sass:list';
 @use '../api' as *;
 
