--- a/scss/reset/_normalize.scss
+++ b/scss/reset/_normalize.scss
@@ -1,4 +1,5 @@
-/// Normalize styles
-/// ================
+// --------------------------------
+//   Normalize styles
+// --------------------------------
 
 @import 'modern-normalize/modern-normalize';
