--- a/scss/utilities/_layout.scss
+++ b/scss/utilities/_layout.scss
@@ -1,2 +1,6 @@
+// --------------------------------
+//   Layout
+// --------------------------------
+
 // TODO: Stack; container; display; floats; clear (see others in tailwind, etc).
 // Also: https://1linelayouts.glitch.me/ (centered, etc).
