--- a/scss/core/helpers/_map.scss
+++ b/scss/core/helpers/_map.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Map helpers
+// --------------------------------
+
 @use 'sass:map';
 @use 'sass:list';
 @use 'sass:string';
