--- a/scss/core/helpers/_string.scss
+++ b/scss/core/helpers/_string.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   String helpers
+// --------------------------------
+
 @use 'sass:string';
 
 $escaping-characters: (
