--- a/scss/core/modules/_media-query.scss
+++ b/scss/core/modules/_media-query.scss
@@ -1,3 +1,7 @@
+// --------------------------------
+//   Media Queries / Breakpoints
+// --------------------------------
+
 @use 'sass:map';
 @use 'sass:list';
 @use '../api' as *;
