--- a/scss/reset/_reset.scss
+++ b/scss/reset/_reset.scss
@@ -1,5 +1,6 @@
-/// Styles reset
-/// ============
+// --------------------------------
+//   Reset styles
+// --------------------------------
 
 /* Remove default margin */
 blockquote,
