--- a/scss/core/modules/_svg.scss
+++ b/scss/core/modules/_svg.scss
@@ -3,7 +3,30 @@
 // --------------------------------
 
 @use 'sass:math';
-@use '../helpers' as *;
+@use '../helpers/string';
+
+$escape-characters: (
+  ('"', "'"),
+  ('<', '%3C'),
+  ('>', '%3E'),
+  ('(', '%28'),
+  (')', '%29'),
+  ('#', '%23'),
+  ('&', '%26')
+) !default;
+
+/// Escape a string, replacing invalid characters.
+///
+/// @param {string} $str
+///
+/// @return {string}
+///
+@function escape($str) {
+  @each $char, $encoded in $escape-characters {
+    $str: string.replace($str, $char, $encoded);
+  }
+  @return $str;
+}
 
 /// Encodes an SVG as data URI, replacing invalid characters
 ///
@@ -12,5 +35,5 @@
 /// @return {string}
 ///
 @function url-encode($svg) {
-  @return url('data:image/svg+xml;charset=utf8,#{str-escape($svg)}');
+  @return url('data:image/svg+xml;charset=utf8,#{escape($svg)}');
 }
